# avida

./: .gitignore  .gitmodules  AUTHORS  Avida-Info.plist  Avida.sln  Avida.vcproj  Avida.vcxproj  Avida.vcxproj.filters  BuildAvida.py  CHANGES  CMakeLists.txt  CNAME  CONTRIBUTORS  COPYING  COPYING.gpl  ChangeLog  DartConfig.cmake  Dockerfile  INSTALL  Jamroot  KNOWN_BUGS  NEWS  README  README.txt  RELEASE_NOTES  SConstruct  avida_doc.rules  build.xml  build_avida  compiler_test.cc  forrest.properties  index.html  my_avida_build_options.py  params.json  run_tests  status.xml  test_avida  update_avui.sh
apps/viewer-web/: CMakeLists.txt
apps/viewer-webed/: CMakeLists.txt
avida-core/: .gitignore  AUTHORS  CMakeLists.txt  RELEASE_NOTES
avida-core/Avida-Core.xcodeproj/: .gitignore  project.pbxproj
avida-core/CMakeModules/: FindNcurses.cmake
avida-core/documentation/: analyze.html  code_c++_intro.html  code_environment.html  code_genome.html  code_instruction.html  code_task.html  config.html  environment.html  inst_set.html  internal_resources.html  main.css  print_data.html
avida-core/notes/: readme.txt
avida-core/support/: sloc_file_ext.map
avida-core/unittests/: main.cc
consistencytests/: CMakeLists.txt  SConscript
consistencytests/Tests/: CMakeLists.txt  SConscript
consistencytests/_asl_fail_016_var_redefinition/: test_list
consistencytests/_task_optimize_lim_res/: test_list
consistencytests/avatars/: test_list
consistencytests/collect-spec-3n4r-AC/: test_list
consistencytests/collect-spec-3n9r-AB/: test_list
consistencytests/collect-spec-3n9r-B/: test_list
consistencytests/collect_unit_probabilistic/: test_list
consistencytests/heads_perf_1000u_rate/: test_list
consistencytests/hoarding_collect_split_230u/: test_list
consistencytests/hoarding_instn_analyze/: test_list
consistencytests/merge_deme_resources/: test_list
consistencytests/migration_div_mut_rate_inject_test_500u/: test_list
consistencytests/optimize_multivar_lim_res/: test_list
consistencytests/parasites_limited_resources/: test_list
consistencytests/reaction_ordering/: test_list
consistencytests/replace_deleterious/: test_list
consistencytests/resources_9r/: test_list
consistencytests/spatial_res_100u/: test_list
consistencytests/tolerance_variations/: test_list
libs/tcmalloc-1.4/: CMakeLists.txt
source/classification/: CMakeLists.txt  SConscript  cBGGenotype.cc  cBGGenotype.h  cBGGenotypeManager.cc  cBGGenotypeManager.h  cBGSpecies.cc  cBGSpecies.h  cBGSpeciesManager.cc  cBGSpeciesManager.h  cBioGroup.cc  cBioGroup.h  cBioGroupData.h  cBioGroupListener.cc  cBioGroupListener.h  cBioGroupManager.cc  cBioGroupManager.h  cBioUnit.cc  cBioUnit.h  cClassificationManager.cc  cClassificationManager.h  cGenomeTestMetrics.cc  cGenomeTestMetrics.h  cGenotype.cc  cGenotype.h  cGenotypeControl.cc  cGenotypeControl.h  cGenotype_BirthData.cc  cGenotype_BirthData.h  cGenotype_TestData.h  cInjectGenotype.cc  cInjectGenotype.h  cInjectGenotypeControl.cc  cInjectGenotypeControl.h  cInjectGenotypeElement.h  cInjectGenotypeQueue.cc  cInjectGenotypeQueue.h  cInjectGenotype_BirthData.cc  cInjectGenotype_BirthData.h  cLineage.cc  (+14 more)
source/cpu/: 4stack_head.cc  4stack_head.hh  CMakeLists.txt  SConscript  cCPUMemory.cc  cCPUMemory.h  cCPUStack.cc  cCPUStack.h  cCPUTestInfo.cc  cCPUTestInfo.h  cCodeLabel.cc  cCodeLabel.h  cHardware4Stack.cc  cHardware4Stack.h  cHardware4Stack_Thread.cc  cHardware4Stack_Thread.h  cHardwareBCR.cc  cHardwareBCR.h  cHardwareBase.cc  cHardwareBase.h  cHardwareCPU.cc  cHardwareCPU.h  cHardwareCPU_Thread.cc  cHardwareCPU_Thread.h  cHardwareExperimental.cc  cHardwareExperimental.h  cHardwareFactory.cc  cHardwareFactory.h  cHardwareGP8.cc  cHardwareGP8.h  cHardwareGX.cc  cHardwareGX.h  cHardwareMBE.cc  cHardwareMBE.h  cHardwareMGE.cc  cHardwareMGE.h  cHardwareManager.cc  cHardwareManager.h  cHardwareSMT.cc  cHardwareSMT.h  (+85 more)
source/main/: Avida.cc  Avida.h  CMakeLists.txt  MyCodeArrayLessThan.h  SConscript  analyze.cc  analyze.hh  analyze_command.hh  analyze_command_def.hh  analyze_command_def_base.hh  analyze_flow_command.hh  analyze_flow_command_def.hh  analyze_function.hh  analyze_genotype.cc  analyze_genotype.hh  analyze_util.cc  analyze_util.hh  avida.cc  avida.h  avida.hh  avida_driver_analyze.cc  avida_driver_analyze.hh  avida_driver_base.cc  avida_driver_population.cc  avida_driver_population.hh  avida_triggers.hh  birth_chamber.cc  birth_chamber.hh  cAnalyze.cc  cAnalyze.h  cAnalyzeCommand.h  cAnalyzeCommandDef.h  cAnalyzeFlowCommand.h  cAnalyzeFlowCommandDef.h  cAnalyzeFunction.h  cAnalyzeGenotype.cc  cAnalyzeGenotype.h  cAnalyzeUtil.cc  cAnalyzeUtil.h  cAvidaConfig.cc  (+324 more)
source/qt-viewer/: CMakeLists.txt  activate_watcher.hh  activate_watcher_proto.hh  apocalypse_widget.cc  apocalypse_widget.hh  avd_avida_driver.cc  avd_avida_driver.hh  avd_avida_thread_drvr_dbg.hh  avd_avida_thread_drvr_dbg_proto.hh  avd_connections.cc  avd_connections.hh  avd_driver_controller.cc  avd_driver_controller.hh  avd_event_viewer_controller.cc  avd_event_viewer_controller.hh  avd_godbox_controller.cc  avd_godbox_controller.hh  avd_gui_msg_event.hh  avd_help_controller.cc  avd_help_controller.hh  avd_help_viewer.cc  avd_help_viewer.hh  avd_instruction_viewer_controller.cc  avd_instruction_viewer_controller.hh  avd_lograte_widget.cc  avd_lograte_widget.hh  avd_main_window.cc  avd_main_window.hh  avd_main_window_controller.cc  avd_main_window_controller.hh  avd_message_display.cc  avd_message_display.hh  avd_message_display_proto.hh  avd_message_display_typetrack.hh  avd_message_display_typetrack_proto.hh  avd_message_queue.hh  avd_message_queue_hdrs.hh  avd_mission_control.cc  avd_mission_control.hh  avd_plot_viewer_controller.cc  (+104 more)
source/testsuites/: CMakeLists.txt  SConscript  cInitFile-unit-tests.cc  full-unit-tests.cc
source/tools/: AvidaTools.cc  AvidaTools.h  CMakeLists.txt  SConscript  Tools.cc  Tools.h  block_struct.cc  cArgContainer.cc  cArgContainer.h  cArgSchema.cc  cArgSchema.h  cBitArray.cc  cBitArray.h  cBlockStruct.cc  cBlockStruct.h  cChangeList.cc  cCoords.h  (+234 more)
(+4572 files in other folders)
